<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/inmo360"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_deep_teal_200"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Inmo360">

    <Button
        android:id="@+id/btt_QR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="51dp"
        android:background="@color/material_deep_teal_500"
        android:ellipsize="middle"
        android:onClick="escanearCodigo"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/scan_qr" />

    <Spinner
        android:id="@+id/spin_ciudad"
        style="?android:attr/spinnerItemStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/btt_buscar"
        android:layout_marginRight="16dp"
        android:layout_toRightOf="@+id/btt_buscar"
        android:layout_toStartOf="@+id/btt_buscar"
        android:background="@color/material_deep_teal_500"
        android:dropDownSelector="@color/material_blue_grey_950"
        android:ellipsize="marquee"
        android:entries="@string/spin_ciudad_sin_conexion"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="bottom"
        android:popupBackground="@color/material_deep_teal_500"
        android:singleLine="true"
        android:spinnerMode="dropdown"
        android:textColor="#808080"
        android:textSize="18sp"
        android:theme="@style/AppTheme"
        android:transitionGroup="true" />

    <Button
        android:id="@+id/btt_buscar"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="16dp"
        android:background="@color/material_deep_teal_500"
        android:onClick="mapasAct"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/btt_Buscar" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/spin_ciudad"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btt_QR"
        android:adjustViewBounds="false"
        android:background="@color/material_deep_teal_500"
        android:backgroundTint="@color/material_deep_teal_200"
        android:contentDescription="@string/img_LogoApp"
        android:cropToPadding="false"
        android:src="@drawable/inmobiliaria" />

    <Button
        android:id="@+id/btt_Fav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="51dp"
        android:background="@color/material_deep_teal_500"
        android:ellipsize="middle"
        android:onClick="entrarFavorito"
        android:text="@string/app_Fav" />

</RelativeLayout>
